bk_ida/gobmkida/g0/safe_move
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/safe_move/src/engine/reading.c:5001:7: error: use of undeclared identifier 'initialized_0'
if ( !initialized_0 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/safe_move/src/engine/reading.c:5004:1: error: use of undeclared identifier 'initialized_0'
initialized_0 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/safe_move/src/obj/1/reading.o] Error 1
